correcció faltes ortogràfiques

--- a/Chrysallis.html
+++ b/Chrysallis.html
@@ -52,8 +52,7 @@
             <h2 id="EcoArts" class="titol">CHRYSALLIS: ANDROID, .NET, ASP.NET</h2>
             <div class="aplicacio">
                 <p>L'aplicació d'esdeveniments Chrysallis és una aplicació per als socis de l'associació que els permet
-                    conèixer i poder
-                    poder apuntar-se als diferents esdeveniments que organitza l'entitat. El projecte està format per un
+                    conèixer i apuntar-se als diferents esdeveniments que organitza l'entitat. El projecte està format per un
                     programa de gestió
                     de contingut escrit amb C# i .NET utilitzant l'Orm EntityFramework per a les consultes sobre la base
                     de dades SQL Server,
@@ -73,11 +72,11 @@
                             <img class="imgEscriptori" src="imatges/Chrysallis/Escritorio/login.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Pantalla d'inici des d'on l'usuari realitza el login per entrar a l'aplicació. Existeixen dos
+                        <p>Pantalla d'inici des d'on l'usuari realitza l'inici de sessió per entrar a l'aplicació. Existeixen dos
                             tipus d'usuari,
-                            els superadministrador que poden gestionar events i socis de qualsevol comunitat així com
+                            el superadministrador que pot gestionar esdeveniments i socis de qualsevol comunitat així com
                             crear altres usuaris
-                            de l'aplicació d'escriptori i els administradors que poden gestionar events i socis
+                            de l'aplicació d'escriptori i els administradors que poden gestionar esdeveniments i socis
                             d'aquelles comunitats
                             que se'ls ha assignat.
                         </p>
@@ -101,9 +100,9 @@
                         </div>
                         <p>Menú des d'on es podrà gestionar els usuaris de l'aplicació. A la grid principal veurem tots
                             els usuaris
-                            creats en cas de ser superadministradors per tal de poder borrar-los o modificar-los en cas
-                            necessàri així com canviar
-                            el seu password d'accés, o bé trobarem el propi usuari en cas de ser usuari sense permisos
+                            creats en cas de ser superadministradors per tal de poder esborrar-los o modificar-los en cas
+                            necessari així com canviar
+                            el seu password d'accés, o bé trobarem el mateix usuari en cas de ser usuari sense permisos
                             de superadministrador.
                         </p>
                     </div>
@@ -112,9 +111,9 @@
                             <img class="imgEscriptori" src="imatges/Chrysallis/Escritorio/socis.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Des d'aquest menú l'usuari podrà donar d'alta els socis que s'hagin registrat a través de 
-                            la pàgina web, modificar-los, o buscar-los a través de la barra de búsqueda. Els usuaris están 
-                            organitzats per la comunitat autònoma des de la que s'han donat d'alta.
+                        <p>Des d'aquest menú l'usuari podrà donar d'alta els socis que s'hagin registrat a través de
+                            la pàgina web, modificar-los, o buscar-los a través de la barra de cerca. Els usuaris estan
+                            organitzats per la comunitat autònoma des de la qual s'han donat d'alta.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -123,9 +122,9 @@
                                 alt="imatge presentació" />
                         </div>
                         <p>Finalment podem veure els esdeveniments que s'han anat creant a la grid d'entrada. Els esdeveniments estan
-                            ordenats per ordre de creació i fent doble clic en un d'ells podriem veure els detalls de l'esdeveniment, 
+                            ordenats per ordre de creació i fent doble clic en un d'ells podríem veure els detalls de l'esdeveniment,
                             quants assistents hi ha apuntats, quin soci i amb quants acompanyants ve...
-                            També podem crear nous esdeveniments així com modificar-los, tot a través del menú superior que ens porta 
+                            També podem crear nous esdeveniments així com modificar-los, tot a través del menú superior que ens porta
                             a les diferents opcions.
                         </p>
                     </div>
@@ -147,7 +146,7 @@
                             <img class="imgEscriptori imgAnd" src="imatges/Chrysallis/Android/login.jpg"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Pantalla de login inicial per controlar l'accés dels usuaris amb enllaç a la pàgina web de
+                        <p>Pantalla d'inici de sessió inicial per controlar l'accés dels usuaris amb enllaç a la pàgina web de
                             l'entitat
                             en cas que no estiguin registrats.
                         </p>
@@ -158,7 +157,7 @@
                             <img class="imgEscriptori imgAnd" src="imatges/Chrysallis/Android/eventos.jpg"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Al entrar a l'aplicació es mostren tots els esdeveniments que estan programats per una
+                        <p>A l'entrar a l'aplicació es mostren tots els esdeveniments que estan programats per una
                             determinada comunitat
                             autònoma. La comunitat per defecte es pot seleccionar a l'apartat "MiPerfil".
                         </p>
@@ -169,8 +168,8 @@
                             <img class="imgEscriptori imgAnd" src="imatges/Chrysallis/Android/filtro.jpg"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Existeix un dialog filtre per poder buscar aquells esdeveniments concrets que siguin de
-                            l'interés del soci.
+                        <p>Existeix un filtre "dialog" per poder buscar aquells esdeveniments concrets que siguin de
+                            l'interès del soci.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -182,8 +181,8 @@
                         <p>Al clicar en algun esdeveniment s'entra en el detall on es mostra tota la informació
                             necessària per poder
                             decidir si el soci s'hi vol apuntar o no. En cas que vulgui assistir-hi haurà de registrar
-                            l'assistencia
-                            enviant el número d'assistents totals amb els que voldrà assistir.
+                            l'assistència
+                            enviant el nombre d'assistents totals amb els quals voldrà assistir.
                         </p>
                     </div>
 
@@ -204,11 +203,10 @@
                             <img class="imgEscriptori imgAnd" src="imatges/Chrysallis/Android/perfil.jpg"
                                 alt="imatge presentació" />
                         </div>
-                        <p>En l'opció "MiPerfil" l'usuari pot trobar les dades amb les que ha realitzat el loggin dins
+                        <p>En l'opció "MiPerfil" l'usuari pot trobar les dades amb les quals ha realitzat el login dins
                             l'aplicació
-                            així com l'opció de poder seleccionar aquella comunitat de la que vol veure els
-                            esdeveniments per defecte a
-                            l'entrar a l'aplicació. També troba un enllaç a l'activity que el permet canviar el password
+                            així com l'opció de poder seleccionar aquella comunitat de la qual vol veure els
+                            esdeveniments per defecte en entrar a l'aplicació. També troba un enllaç a l'activity que li permet canviar el password
                             personal.
                         </p>
                     </div>
