--- a/Estabilitats.html
+++ b/Estabilitats.html
@@ -53,17 +53,16 @@
         <section class="section">
             <h2 id="Gestio" class="titol">GESTIO DE LES ESTABILITATS DE LABORATORI FARMACEUTIC</h2>
             <div class="aplicacio">
-                <p>Les estabilitats ICH d'un laboratori farmacèutic requereixen del control d'una gran quantitat de
+                <p>Les estabilitats ICH d'un laboratori farmacèutic requereixen el control d'una gran quantitat de
                     dades diferents i
-                    poder-les relacionar entre sí per tal de permetre als diferents tipus d'usuaris realitzar o no les
+                    poder-les relacionar entre si per tal de permetre als diferents tipus d'usuaris realitzar o no les
                     accions necessàries
-                    en cada etapa de l'estabilitat. El fluxe habitual d'una estabilitat és l'aprovació de
-                    l'estabilitat,l'entrada dels
+                    en cada etapa de l'estabilitat. El flux de treball habitual d'una estabilitat és l'aprovació de
+                    l'estabilitat l'entrada dels
                     productes i els diferents lots, el control de la ubicació i la quantitat dels lots en cada càmera,
                     la data d'extracció
-                    de les mostres de les càmeres i l'usuari que l'ha realitzat i els anàlisis que se'n deriven així com
-                    l'estat en
-                    que aquests es troben.
+                    de les mostres de les càmeres i l'usuari que l'ha realitzat i les anàlisis que se'n deriven així com
+                    l'estat en què aquests es troben.
                 </p>
             </div>
         </section>
@@ -80,7 +79,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/login.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Login inicial per entrar en l'aplicació. Existeixen diferents tipus d'usuaris amb els que tindrem permisos
+                        <p>Login inicial per entrar en l'aplicació. Existeixen diferents tipus d'usuaris amb els quals tindrem permisos
                             per executar un determinat tipus d'accions.
                         </p>
                     </div>
@@ -90,9 +89,9 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/nuevaStab1.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Les estabilitats han de ser introduides per un usuari amb permisos. Inicialment s'indica el producte del qual es volen
+                        <p>Les estabilitats han de ser introduïdes per un usuari amb permisos. Inicialment s'indica el producte del qual es volen
                             crear les estabilitats i la quantitat de lots. Anteriorment s'ha de crear el producte afegint els protocols que afecten
-                            l'estabilitat així com els análisis que es poden realitzar.
+                            l'estabilitat així com els anàlisis que es poden realitzar.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -101,8 +100,8 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/nuevaStab2.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>introducció dels lots, dels protocols associats al producte que afecten a l'estabilitat, les cámeres on seran
-                            introduits, els tipus d'anàlisis així com la data prevista d'entrada a càmeres.
+                        <p>Introducció dels lots, dels protocols associats al producte que afecten l'estabilitat, selecció de les càmeres on seran
+                            introduïts els lots, els tipus d'anàlisis així com la data prevista d'entrada a càmeres.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -111,8 +110,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/nuevaStab3.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Completem la informació amb el package del producte, si té un temps inicial per fer anàlisis i 
-                            finalment ens apareix la informació de les càmeres que haguem seleccionat previament amb els temps 
+                        <p>Completem la informació amb el package del producte i si té un temps inicial per fer anàlisis. Finalment ens apareix la informació de les càmeres que hàgim seleccionat prèviament amb els temps
                             d'anàlisis a escollir.
                         </p>
                     </div>
@@ -122,7 +120,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/nuevaStab4.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Per últim haurem de seleccionar un usuari que ens revisi la introducció de dades ja que l'estabilitat no 
+                        <p>Per últim haurem de seleccionar un usuari que ens revisi la introducció de dades, ja que l'estabilitat no
                             entrarà al sistema fins que l'usuari no doni l'aprovació.
                         </p>
                     </div>
@@ -151,7 +149,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/ubi1.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>El dia que entra l'estabilitat en càmeres es controlen les unitats que s'introdueixen ja que almenys ha d'haver-hi
+                        <p>El dia que entra l'estabilitat en càmeres es controlen les unitats que s'introdueixen, ja que almenys ha d'haver-hi
                             la quantitat que indica el protocol.
                         </p>
                     </div>
@@ -161,8 +159,8 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/ubi2.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Un cop s'ha entrar el lot correctament en càmeres ja podem consultar tota la informació referent al lot, unitats
-                            introduides Inicialment, unitats que queden actualment, ubicacions...
+                        <p>Un cop s'ha entrat el lot correctament en càmeres ja podem consultar tota la informació referent al lot, unitats
+                            introduïdes Inicialment, unitats que queden actualment, ubicacions...
                         </p>
                     </div>
                     <div class="pantalla">
@@ -181,7 +179,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/ubi4.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>La ocupació del lot
+                        <p>L'ocupació del lot
                             també permet fer previsió d'ocupació de la càmera en el temps per a preveure noves entrades en una data determinada
                             que l'usuari pot introduir.
                         </p>
@@ -201,8 +199,8 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/extraccions1.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Per a cada lot existeix una taula on es visualitza el temps teòric d'extracció, la data i l'usuari en que s'ha extret
-                            el punt d'anàlisis, les unitats necessàries per cada anàlisis i  el total a extreure.
+                        <p>Per a cada lot existeix una taula on es visualitza el temps teòric d'extracció, la data i l'usuari en què s'ha extret
+                            el punt d'anàlisis, les unitats necessàries per a cada anàlisi i el total a extreure.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -211,9 +209,9 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/extraccions2.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>El detall dels anàlisis ens permet veure quines analítiques formen cada tipus d'anàlisis. Un cop la data
-                            de sortida hagi vençut apareixerà l'opció que permetrà a cada analista indicar si s'ha realitzat l'anàlisis. 
-                            D'aquesta manera es tindrà coneixement actualitzat de les tasques realitzades i les pendents.
+                        <p>El detall de l'anàlisi ens permet veure quines analítiques formen cada tipus d'anàlisis. Un cop la data
+                            de sortida hagi vençut apareixerà l'opció que permetrà a cada analista indicar si s'ha realitzat l'anàlisi.
+                            D'aquesta manera es tindrà coneixement actualitzat de les tasques fetes i les pendents.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -222,11 +220,11 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/extraccions3.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>L'aplicació ens permet mostrar l'estat dels lots i dels seus anàlisis ja sigui agrupant-los per tipus de producte
-                            o bé pels estats dels lots ("En càmeres", "Esperant anàlisis", "En anàlisis", "Esperant revisió", "En revisió" i 
+                        <p>L'aplicació ens permet mostrar l'estat dels lots i de les seves anàlisis ja sigui agrupant-los per tipus de producte
+                            o bé pels estats dels lots ("En càmeres", "Esperant anàlisis", "En anàlisis", "Esperant revisió", "En revisió" i
                             "Finalitzats"). Segons el tipus d'usuari que entra a l'aplicació, aquest tindrà permís per actualitzar un determinat estat
-                            del lot sempre i quan s'hagi extret el punt d'anàlisis prèviament. Un cop s'actualitza l'estat, la data d'actualització queda registrada. L'aplicació té un apartat d'estadístiques
-                            que ens mostra la mitjana de temps que dura cada fase en general o d'un projecte determinat. 
+                            del lot sempre que s'hagi extret el punt d'anàlisis prèviament. Un cop s'actualitza l'estat, la data d'actualització queda registrada. L'aplicació té un apartat d'estadístiques
+                            que ens mostra la mitjana de temps que dura cada fase en general o d'un projecte determinat.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -235,7 +233,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/extraccions4.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>El control d'anàlisis permet tenir actualitzada les tasques realitzades i conèixer l'estat de cada lot. 
+                        <p>El control d'anàlisis permet tenir actualitzada les tasques dutes a terme i conèixer l'estat de cada lot.
                         </p>
                     </div>
             </div>
@@ -252,8 +250,8 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/extres1.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>Avís de sortida de mostres. A l'entrar a l'aplicació es mostra de manera ràpida les sortides dels lots que s'han de realitzar en els
-                            propers 30 díes.
+                        <p>Avís de sortida de mostres. En entrar a l'aplicació es mostra de manera ràpida les sortides dels lots que s'han de realitzar en els
+                            propers 30 dies.
                         </p>
                     </div>
                     <div class="pantalla">
@@ -272,7 +270,7 @@
                             <img class="imgEscriptori" src="imatges/Estabilitat/extres2.JPG"
                                 alt="imatge presentació" />
                         </div>
-                        <p>El programa conté un sistema de comunicació intern que envia missatges ja sigui a usuaris concrets o bé 
+                        <p>El programa conté un sistema de comunicació intern que envia missatges a usuaris concrets o bé
                             missatges públics que poden ser vistos per tots. Aquests missatges són enviats directament pel programa
                             quan els usuaris realitzen determinades accions...
                         </p>
