--- a/Estabilitats.html
+++ b/Estabilitats.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Aplicació Estabiltiats ICH</title>
     <meta name="viewport" content="initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/estilos.css" />
     <link rel="stylesheet" href="fontAwesome/css/fontawesome.min.css" />
