--- a/Estabilitats.html
+++ b/Estabilitats.html
@@ -57,11 +57,11 @@
                     dades diferents i
                     poder-les relacionar entre si per tal de permetre als diferents tipus d'usuaris realitzar o no les
                     accions necessàries
-                    en cada etapa de l'estabilitat. El flux de treball habitual d'una estabilitat és l'aprovació de
-                    l'estabilitat l'entrada dels
-                    productes i els diferents lots, el control de la ubicació i la quantitat dels lots en cada càmera,
-                    la data d'extracció
-                    de les mostres de les càmeres i l'usuari que l'ha realitzat i les anàlisis que se'n deriven així com
+                    en cada etapa de l'estabilitat. El flux de treball habitual d'una estabilitat és la creació de l'estabilitat,
+                    la seva aprovació, l'entrada dels
+                    lots en càmeres, el control de la ubicació i la quantitat d'unitats a cada càmera,
+                    la data d'extracció de cada punt d'anàlisi i
+                    l'usuari que l'ha realitzat i les anàlisis que s'han de realitzar així com
                     l'estat en què aquests es troben.
                 </p>
             </div>
