--- a/Estabilitats.html
+++ b/Estabilitats.html
@@ -62,7 +62,7 @@
                     lots en càmeres, el control de la ubicació i la quantitat d'unitats a cada càmera,
                     la data d'extracció de cada punt d'anàlisi i
                     l'usuari que l'ha realitzat i les anàlisis que s'han de realitzar així com
-                    l'estat en què aquests es troben.
+                    l'estat en què aquestes es troben.
                 </p>
             </div>
         </section>
