--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         <input type="text" id="fmail" name="_replyto" placeholder="Email" required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
                         <textarea id="ftext" rows="10" cols="30" name="message"
                             placeholder="Escriu aquí el teu missatge..."></textarea>
-                        <input type="submit" id="buto" value="Envia!">
+                        <input type="submit" id="buto" value="Send">
                         <div id="error" style="display: none;"></div>
                     </form>
                 </div> 
