--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
             <div class="pareSlide fixed-top2">
                 <div class="slides">
                     <img class="imgCon" src="imatges/coneixements/Java.JPG">
+                    <img class="imgCon" src="imatges/coneixements/Android.JPG">
                     <img class="imgCon" src="imatges/coneixements/cSharp.JPG">
                     <img class="imgCon" src="imatges/coneixements/html.JPG">
                     <img class="imgCon" src="imatges/coneixements/bd.JPG">
+                    <img class="imgCon" src="imatges/coneixements/bash.JPG">
                     <img class="imgCon" src="imatges/coneixements/git.JPG">
                 </div>
             </div>
@@ -138,113 +140,9 @@
             });
         </script>
 
-        <!--
-        <section class="section">
-            <h2 id="Coneixements" class="titol">Coneixements</h2>
-            <div class="sectionHor">
-                <div class="seccioConeixements">
-                    <article class="artConeixements">
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" id="fotoJava" src="imatges/iconoJava.jpg" />
-                                <p class="textImatge"><b>Java</b></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoAndroid.jpg" />
-                                <p class="textImatge"><b>Android</b></p>
-                            </div>
-                        </div>
+       
+        
 
-                    </article>
-                    <p>Aplicacions per a mòbils i tauletes Android utilitzant Android Studio i llenguatge Java amb
-                        programació orientada a objectes. </p>
-                </div>
-                <div class="seccioConeixements">
-                    <article class="artConeixements">
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoCsharp.jpg" />
-                                <p class="textImatge"><b>C Sharp</b></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/puntoNet.jpg" />
-                                <p class="textImatge"><b>Framework .NET</b>
-                                </p>
-                            </div>
-                        </div>
-                    </article>
-                    <p>Aplicacions per a PC amb sistemes operatius Windows realitzats amb el Framework .NET i llenguatge
-                        C# amb
-                        programació orientada a objectes. </p>
-                </div>
-                <div class="seccioConeixements">
-                    <article class="artConeixements">
-
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoHtml.JPG" />
-                                <p class="textImatge"><b>HTML 5</b></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoCss.JPG" />
-                                <p class="textImatge"><b>CSS 3</b></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoPhp.JPG" />
-                                <p class="textImatge"><b>PHP 7</b></p>
-                            </div>
-                        </div>
-                    </article>
-                    <p>Disseny de pàgines i aplicacions web amb HTML 5, CSS 3 i PHP7. </p>
-                </div>
-                <div class="seccioConeixements">
-                    <article class="artConeixements">
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoMysql.jpg" />
-                                <p class="textImatge"><b>MySQL</b></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoServer.JPG" />
-                                <p class="textImatge"><b>SQL Server</b></p>
-                            </div>
-                        </div>
-                    </article>
-                    <p>Bases de dades MySql en aplicacions web y Sql Server en aplicacions C# utilitzant Orm Entity
-                        Framework. </p>
-                </div>
-                <div class="seccioConeixements">
-                    <article class="artConeixements">
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoBash.JPG" />
-                                <p class="textImatge"><b>Bash</b></p>
-                            </div>
-                        </div>
-                        <div class="content">
-                            <div class="tecnica">
-                                <img class="icono" src="imatges/iconoGit.jpg" />
-                                <p class="textImatge"><b>Git / GitHub</b></p>
-                            </div>
-                        </div>
-                    </article>
-                    <p>Llenguatge Bash per a configurar sistemes Linux i programar scripts. </br> Git per a controlar
-                        les versions del codi
-                        de les aplicacions i GitHub per a compartir el codi en el treball en equip.</p>
-                </div>
-            </div>
-        </section>
--->
 
         <div class="divisor"></div>
         <section class="section">
