--- a/Chrysallis.html
+++ b/Chrysallis.html
@@ -39,9 +39,9 @@
             <li><a href="index.html#Proj"><img class="iconId" src="imatges/icon/project.png" />TORNAR</a>
             </li>
             <div class="navSec">
-                <li><a href="#">CHRYSALLIS: ANDROID, .NET, ASP.NET</a></li>
-                <li><a href="#">PROGRAMA DE GESTIO: C# I .NET</a></li>
-                <li><a href="#">APLICACIÓ MÒBIL: JAVA, ANDROID STUDIO I ASP.NET</a></li>
+                <li><a href="#Chry">CHRYSALLIS: ANDROID, .NET, ASP.NET</a></li>
+                <li><a href="#gestio">PROGRAMA DE GESTIO: C# I .NET</a></li>
+                <li><a href="#social">APLICACIÓ MÒBIL: JAVA, ANDROID STUDIO I ASP.NET</a></li>
             </div>
         </nav>
 
@@ -49,7 +49,7 @@
     <div class="columna">
 
         <section class="section">
-            <h2 id="EcoArts" class="titol">CHRYSALLIS: ANDROID, .NET, ASP.NET</h2>
+            <h2 id="Chry" class="titol">CHRYSALLIS: ANDROID, .NET, ASP.NET</h2>
             <div class="aplicacio">
                 <p>L'aplicació d'esdeveniments Chrysallis és una aplicació per als socis de l'associació que els permet
                     conèixer i apuntar-se als diferents esdeveniments que organitza l'entitat. El projecte està format per un
@@ -136,7 +136,7 @@
 
         </section>
         <div class="divisor"></div>
-        <h2 id="videojoc" class="titol">Videojoc tauleta: Java i Android Studio</h2>
+        <h2 id="social" class="titol">APLICACIÓ MÒBIL: JAVA, ANDROID STUDIO I ASP.NET</h2>
         <section class="section">
             <div class="aplicacio">
                 <div class="program">
